syntax = "proto3";

import "auth.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-swagger/options/annotations.proto";

package shanvl.garbage.auth.v1;

option go_package = ".;authv1pb";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    security_definitions: {
        security: {
            key: "bearer"
            value: {
                type: TYPE_API_KEY
                in: IN_HEADER
                name: "Authorization"
                description: "Authentication token, prefixed by Bearer: 'Bearer <token>'"
            }
        }
    }
    security: {
        security_requirement: {
            key: "bearer";
        }
    }
};

service AuthService {
    rpc ActivateUser (ActivateUserRequest) returns (ActivateUserResponse) {
        option (google.api.http) = {
            post: "/v1/me"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            security: {}
        };
    }
    rpc ChangeUserRole (ChangeUserRoleRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/users/{id}"
            body: "*"
        };
    }
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/users"
            body: "*"
        };
    }
    rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/users/{id}"
            body: "*"
        };
    }
    rpc Login (LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/v1/me/clients"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            security: {}
        };
    }
    rpc Logout (LogoutRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/me/clients/{client_id}"
        };
    }
    rpc LogoutAllClients (google.protobuf.Empty) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/me/clients"
        };
    }
}

message ActivateUserRequest {
    string verify_token = 2;
    string password = 3;
}

message ActivateUserResponse {
    Tokens tokens = 2;
    User user = 1;
}

message ChangeUserRoleRequest {
    string id = 1;
    Role role = 2;
}

message CreateUserRequest {
    string email = 1;
}

message CreateUserResponse {
    User user = 1;
    string verify_token = 3;
}

message DeleteUserRequest {
    string id = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    Tokens tokens = 2;
    User user = 1;
}

message LogoutRequest {
    string client_id = 1;
}
